--- a/src/components/alg/alg-ta/ta2/pages/elem-l5bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l5bdz.html
@@ -18,6 +18,8 @@
       <a href="#t1">A. Префиксные суммы</a>
   <br><a href="#t2">B. Максимальная сумма</a>
   <br><a href="#t3">C. Каждому по компьютеру</a>
+  <br><a href="#t4">D. Правильная, круглая, скобочная</a>
+  <br><a href="#t5">E. Сумма трёх</a>
 </article>
 
 
@@ -103,4 +105,116 @@
   <h3>C. Каждому по компьютеру</h3>
 
   <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>В новом учебном году во Дворец Творчества Юных для занятий в компьютерных классах пришли учащиеся, которые были разбиты на N групп. В i-й группе оказалось Xi человек. Тут же перед директором встала серьезная проблема: как распределить группы по аудиториям. Во дворце имеется M ≥ N аудиторий, в j-й аудитории имеется Yj компьютеров. Для занятий необходимо, чтобы у каждого учащегося был компьютер и еще один компьютер был у преподавателя. Переносить компьютеры из одной аудитории в другую запрещается. Помогите директору!</p>
+
+  <p>Напишите программу для поиска максимального количества групп, которое удастся одновременно распределить по аудиториям, чтобы всем учащимся в каждой группе хватило компьютеров, и при этом остался хотя бы один для учителя.</p>
+
+  <h4>Формат ввода</h4>
+  <p>На первой строке входного файла расположены числа N и M (1 ≤ N ≤ M ≤ 1000). На второй строке расположено N чисел — X1, …, XN (1 ≤ Xi ≤ 1000 для всех 1 ≤ i ≤ N). На третьей строке расположено M чисел Y1, ..., YM (1 ≤ Yi ≤ 1000 для всех 1 ≤ i ≤ M).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите на первой строке число P — количество групп, которое удастся распределить по аудиториям. На второй строке выведите распределение групп по аудиториям — N чисел, i-е число должно соответствовать номеру аудитории, в которой должна заниматься i-я группа. Нумерация как групп, так и аудиторий, начинается с 1. Если i-я группа осталась без аудитории, i-е число должно быть равно 0. Если допустимых распределений несколько, выведите любое из них.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+1 1
+1
+2
+</pre>
+<pre>
+1
+1
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+1 1
+1
+1
+</pre>
+<pre>
+0
+0
+</pre>
+  </details>
+</article>
+
+
+<!-- D. Правильная, круглая, скобочная -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Правильная, круглая, скобочная</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Если из правильного арифметического выражения вычеркнуть всё, кроме круглых скобок, то получится правильная скобочная последовательность. Проверьте, является ли введённая строка правильной скобочной последовательностью.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводится непустая строка, состоящая из открывающих и закрывающих круглых скобок. Длина строки не превосходит 100000</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите YES если введённая строка является правильной скобочной последовательностью и NO иначе</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>(())()</code>
+    <code>YES</code>
+
+    <h4>Пример 2</h4>
+    <code>(()))()</code>
+    <code>NO</code>
+  </details>
+</article>
+
+
+<!-- E. Сумма трёх -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Сумма трёх</h3>
+
+  <div class="time-memory">(Время 15с. Память 256мб)</div>
+
+  <p>Даны три массива целых чисел A, B, C, и целое число S.</p>
+
+  <p>Найдите такие i, j, k, что Ai + Bj + Ck = S.</p>
+
+  <h4>Формат ввода</h4>
+  <p>На первой строке число S (1 ≤ S ≤ 10<sup>9</sup>). Следующие три строки содержат описание массивов A, B, C в одинаковом формате: первое число задает длину n соответствующего массива (1 ≤ n ≤ 15000), затем заданы n целых чисел от 1 до 10<sup>9</sup> — сам массив.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Если таких i, j, k не существует, выведите единственное число -1. Иначе выведите на одной строке три числа — i, j, k. Элементы массивов нумеруются с нуля. Если ответов несколько, выведите лексикографически минимальный.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+2 1 2
+2 3 1
+2 3 1
+</pre>
+    <code>0 1 1</code>
+
+    <h4>Пример 2</h4>
+<pre>
+10
+1 5
+1 4
+1 3
+</pre>
+    <code>-1</code>
+
+    <h4>Пример 3</h4>
+<pre>
+5
+4 1 2 3 4
+3 5 2 1
+4 5 3 2 2
+</pre>
+    <code>0 1 2</code>
+  </details>
 </article>
