--- a/src/components/alg/alg-ta/ta2/pages/elem-l6adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l6adz.html
@@ -10,3 +10,249 @@
   <p><a href="https://contest.yandex.ru/contest/29189/problems/" target="_blank">contest.yandex.ru/contest/29189/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Горячо-Холодно</a>
+  <br><a href="#t2">B. Билеты</a>
+  <br><a href="#t3">C. Проходной балл на олимпиаду</a>
+  <br><a href="#t4">D. Эльфы и олени</a>
+  <br><a href="#t5">E. Выборы</a>
+</article>
+
+
+<!-- A. Горячо-Холодно -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Горячо-Холодно</h3>
+
+  <div class="time-memory">(Время 1с. Память 512мб)</div>
+
+  <p>Это интерактивная задача.</p>
+
+  <p>Егор и Пётр играют в игру «Горячо-Холодно» на двумерной плоскости. В начале игры Егор загадывает точке с неотрицательными целыми координатами, не превышающими 10<sup>9</sup>. После чего Пётр пытается угадать эту точку: на i-м ходу он выбирает некоторую точку с целыми координатами (xi, yi) и сообщает её Егору. Если эта точка ближе к загаданной, чем предыдущая (xi-1, yi-1), Егор отвечает “1”. В противном случае (в том числе и на самый первый вопрос Петра в начале игры) Егор отвечает “0”.</p>
+
+  <p>Когда Пётр считает, что у него достаточно информации, он останавливает игру и сообщает ответ (это действие ходом уже не считается). Если ответ правильный и Пётр сделал не более 500 ходов, Пётр считается победителем. В противном случае выиграл Егор. Пётр просит Вас написать программу, которая гарантированно будет выигрывать у Егора.</p>
+
+  <p>Гарантируется, что Егор играет честно и не будет менять координаты загаданной точки в процессе игры.</p>
+
+  <h4>Протокол взаимодействия</h4>
+
+  <p>Когда игрок делает ход, он должен вывести два целых числа от 0 до 10<sup>9</sup>, разделённых пробелом — координаты очередной точки, о которой он спрашивает. Если игрок хочет остановить игру и сообщить ответ, он должен вывести символ 'A', а после него через пробел — два целых числа: x и y-координаты загаданной точки, после чего завершить выполнение программы.</p>
+
+  <p>После каждого вывода вы обязаны выводить один символ перевода строки, делать команду flush, очищая поток вывода, и считывать ответ. Если ваша программа получит на стандартный вход EOF, она обязана завершить выполнение. В противном случае возможно получение ошибки Time Limit Exceeded.</p>
+
+  <p>На каждый ход программа жюри выводит “1” в случае, когда названная программой-игроком точка ближе к загаданной, чем предыдущая, и “0” в противном случае (то есть когда названная точка не ближе предыдущей или предыдущей точки названо не было, то есть если ход первый).</p>
+
+  <p>Гарантируется, что координаты загаданной точки целые, неотрицательные и не превосходят 10<sup>9</sup>.</p>
+
+  <details>
+    <summary>Пример взаимодействия</summary>
+<pre>
+Система Участник
+
+    1 1
+
+0
+
+    0 0
+
+0
+
+    20 20
+
+1
+
+    20 20
+
+0
+
+    17 239
+
+1
+
+    17 240
+
+0
+
+    A 17 239
+</pre>
+
+  <p>Примечания</p>
+  <p>В приведённом примере загадана точка (x = 17, y=239) и приведён следующий сценарий.</p>
+  <ol>
+    <li>Участник называет точку (1, 1), программа жюри отвечает 0, так как это первый ход.</li>
+    <li>Участник называет точку (0, 0), которая дальше от точки (x = 17, y = 239), чем точка (1, 1), так что программа жюри снова отвечает 0.</li>
+    <li>Следующая попытка участника — (20, 20), и сейчас ответ — 1, так как точка ближе к загаданной.</li>
+    <li>Участник снова называет (20, 20), ответ — 0, так как в случае одинакового расстояния точка не ближе.</li>
+    <li>Участник называет точку (17, 239)... которая и была загадана, но просто получает ответ 1 — если правильная точка названа не как ответ, то игра продолжается.</li>
+    <li>Программа жюри отвечает 0 на точку (17, 240).</li>
+    <li>Участник решает рискнуть и называет точку (17, 239) в качестве ответа. Заметим, что он не имел нужной информации. Ему просто повезло. Вам на такое везение рассчитывать не стоит.</li>
+  </ol>
+
+  <p>Функция flush для очистки потока вывода в некоторых языках:</p>
+  <p>В C (или C++ с использованием stdin) используйте fflush(stdout);</p>
+  <p>В C++ используйте cout.flush();</p>
+  <p>В Java используйте System.out.flush();</p>
+  <p>В Pascal используйте Flush(Output).</p>
+  </details>
+</article>
+
+
+<!-- B. Билеты -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Билеты</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>В одной театральной кассе есть в продаже билеты любой стоимости, выражающейся натуральным числом. При покупке билетов по цене за билет от A до B рублей включительно нужно дополнительно оплатить сервисный сбор в размере C процентов от номинальной стоимости билетов (сервисный сбор не обязательно выражается целым числом рублей, но всегда выражается целым числом копеек). При покупке билетов стоимостью менее A рублей за билет, а также более B рублей за билет, сервисный сбор не берется.</p>
+
+  <p>У вас есть X рублей и вам нужно K билетов одинаковой цены (цена обязательно должна выражаться натуральным числом рублей, 0 не считается натуральным). Билеты какого самого дорогого номинала вы можете себе позволить?</p>
+
+  <h4>Формат ввода</h4>
+  <p>Вводятся целые A, B, C, X, K (1 ≤ A ≤ B ≤ 10<sup>9</sup>, 0 ≤ C ≤ 1000, 0 ≤ X ≤ 10<sup>9</sup>, 1 ≤ K ≤ 100000).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Если на имеющиеся деньги невозможно приобрести ни одного билета, выведите 0. Иначе выведите натуральное число – номинальную стоимость приобретённых билетов.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 10 0 5 5</code>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+    <code>10 100 50 50 5</code>
+    <code>9</code>
+  </details>
+</article>
+
+
+<!-- C. Проходной балл на олимпиаду -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Проходной балл на олимпиаду</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Одна Очень Престижная Олимпиада, как и все престижные олимпиады в последнее время, состоит из двух туров - регионального и заключительного. Правила отбора во второй тур (заключительный этап) просты:</p>
+  <ol>
+    <li>Призеры олимпиады прошлого года приглашаются на заключительный этап вне зависимости от набранных ими в первом туре баллов.</li>
+    <li>Все участники, набравшие не меньше баллов, чем установленный жюри проходной балл, проходят во второй тур.</li>
+    <li>Если в каком-либо из регионов ни один участник по первым двум правилам во второй тур не прошел, то на заключительный этап приглашается участник из этого региона, набравший в нем максимальное количество баллов (это не касается регионов, от которых участников не было).</li>
+  </ol>
+
+  <p>На второй тур можно пригласить не более M участников.</p>
+
+  <p>Известно, что никакие два участника не набрали одинаковое количество баллов. По информации о результатах первого тура помогите жюри установить минимально возможный проходной балл, при котором все правила отбора будут выполнены.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входного файла содержатся три целых числа N, M и R - число участников первого тура, максимально возможное число участников второго тура и число регионов, из которых могли быть участники (1 ≤ M ≤ N). Далее в N строках содержатся результаты каждого из участников. Каждая строка состоит из четырех целых чисел. Сначала идет id - уникальный идентификатор участника (1 ≤ id ≤ N), далее номер региона region, в котором данный участник учится (1 ≤ region ≤ R), затем score - число баллов, набранных участником, четвертое число равно 1, если участник является призером олимпиады прошлого года, и 0 - в противном случае.</p>
+
+  <p>Гарантируется, что все идентификаторы участников различны, никакие два участника не набрали одинаковое число баллов, и выполнить все правила отбора возможно.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно число - минимальный проходной балл, который можно установить.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+9 6 5
+6 1 799 0
+2 4 995 0
+1 4 989 1
+7 2 538 0
+5 4 984 0
+8 2 1000 0
+3 2 998 0
+4 2 823 1
+9 1 543 0
+</pre>
+    <code>985</code>
+  </details>
+</article>
+
+
+<!-- D. Эльфы и олени -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Эльфы и олени</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>Скоро новый год и Санта-Клаус уже начал готовить свою волшебную оленью упряжку, на которой он развозит подарки детям. Известно, что упряжку везут несколько волшебных оленей, на каждом из которых едут два эльфа.</p>
+
+  <p>Но волшебные олени – строптивые животные, поэтому не любые два эльфа могут ехать на любом олене. А именно, каждый олень характеризуется некоторой строптивостью ai, а каждый эльф – темпераментом bi. Два эльфа j и k могут ехать на i-м олене в том и только в том случае, если либо bj &lt; ai &lt; bk, либо bk &lt; ai &lt; bj.</p>
+
+  <p>Чтобы его появление было максимально зрелищным, Санта-Клаус хочет, чтобы в его упряжке было как можно больше оленей. Про каждого оленя Санта знает его строптивость, а про каждого эльфа – его темперамент.</p>
+
+  <p>Помогите Санте выяснить, какое максимальное количество оленей он сможет включить в упряжку, каких оленей ему следует выбрать, и какие эльфы должны на них ехать.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводятся два целых числа m и n – количество оленей и эльфов, соответственно (1 ≤ m, n ≤ 100000).</p>
+
+  <p>Вторая строка содержит m целых чисел ai – строптивость оленей (0 ≤ ai ≤ 10<sup>9</sup>). В третьей строке записаны n целых чисел bi – темперамент эльфов (0 ≤ bi ≤ 10<sup>9</sup>).</p>
+
+  <h4>Формат вывода</h4>
+  <p>В первой строке выведите одно число k – максимальное количество оленей, которое Санта-Клаус может включить в свою упряжку. В следующих k строках выведите по три целых числа: di, ei,1, ei,2 – для каждого оленя в упряжке выведите его номер и номера эльфов, которые на нем поедут. Если решений несколько, выведите любое.</p>
+
+  <p>И эльфы, и олени пронумерованы, начиная с единицы, в том порядке, в котором они заданы во входных данных.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4 6
+2 3 4 5
+1 3 2 2 5 2
+</pre>
+<pre>
+2
+1 1 2
+2 4 5
+</pre>
+  </details>
+</article>
+
+
+<!-- E. Выборы -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Выборы</h3>
+
+  <div class="time-memory">(Время 3с. Память 256мб)</div>
+
+  <p>В одной демократической стране приближаются парламентские выборы. Выборы проходят по следующей схеме: каждый житель страны, достигший восемнадцатилетнего возраста, отдает свой голос за одну из политических партий. После этого партия, которая набрала максимальное количество голосов, считается победившей на выборах и формирует правительство. Если несколько партий набрали одинаковое максимальное количество голосов, то они должны сформировать коалиционное правительство, что обычно приводит к длительным переговорам.</p>
+
+  <p>Один бизнесмен решил выгодно вложить свои средства и собрался поддержать на выборах некоторые партии. В результате поддержки он планирует добиться победы одной из этих партий, которая затем сформирует правительство, которое будет действовать в его интересах. При этом возможность формирования коалиционного правительства его не устраивает, поэтому он планирует добиться строгой победы одной из партий.</p>
+
+  <p>Чтобы повлиять на исход выборов, бизнесмен собирается выделить деньги на агитационную работу среди жителей страны. Исследование рынка показало, что для того, чтобы один житель сменил свои политические воззрения, требуется потратить одну условную единицу. Кроме того, чтобы i-я партия в случае победы сформировала правительство, которое будет действовать в интересах бизнесмена, необходимо дать лидеру этой партии взятку в размере pi условных единиц. При этом некоторые партии оказались идеологически устойчивыми и не согласны на сотрудничество с бизнесменом ни за какие деньги.</p>
+
+  <p>По результатам последних опросов известно, сколько граждан планируют проголосовать за каждую партию перед началом агитационной компании. Помогите бизнесмену выбрать, какую партию следует подкупить, и какое количество граждан придется убедить сменить свои политические воззрения, чтобы выбранная партия победила, учитывая, что бизнесмен хочет потратить на всю операцию минимальное количество денег.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится целое число n – количество партий (1 ≤ n ≤ 10<sup>5</sup>). Следующие n строк описывают партии. Каждая из этих строк содержит по два целых числа: vi – количество жителей, которые собираются проголосовать за эту партию перед началом агитационной компании, и pi – взятка, которую необходимо дать лидеру партии для того, чтобы сформированное ей в случае победы правительство действовало в интересах бизнесмена (1 ≤ vi ≤ 10<sup>6</sup>, 1 ≤ pi ≤ 10<sup>6</sup> или pi = -1). Если партия является идеологически устойчивой, то pi равно -1. Гарантируется, что хотя бы одно pi не равно -1.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В первой строке выведите минимальную сумму, которую придется потратить бизнесмену. Во второй строке выведите номер партии, лидеру которой следует дать взятку. В третьей строке выведите n целых чисел – количество голосов, которые будут отданы за каждую из партий после осуществления операции. Если оптимальных решений несколько, выведите любое.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+7 -1
+2 8
+1 2
+</pre>
+<pre>
+6
+3
+3 2 5
+</pre>
+  </details>
+</article>
