--- a/src/components/alg/alg-ta/ta2/pages/elem-l7adz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l7adz.html
@@ -10,3 +10,223 @@
   <p><a href="https://contest.yandex.ru/contest/29401/problems/" target="_blank">contest.yandex.ru/contest/29401/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t0">0. ФИО</a>
+  <br><a href="#t1">A. Катание на автобусах</a>
+  <br><a href="#t2">B. Покраска забора</a>
+  <br><a href="#t3">C. Объединение прямоугольников</a>
+  <br><a href="#t4">D. Древние цивилизации</a>
+  <br><a href="#t5">E. Отрезки на прямой возвращаются</a>
+</article>
+
+
+<!-- 0. ФИО -->
+<article class="article">
+  <div class="anchor" id="t0"></div>
+  <h3>0. ФИО</h3>
+
+  <p>Введите свою фамилию, имя и отчество (просто текст).</p>
+</article>
+
+
+<!-- A. Катание на автобусах -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Катание на автобусах</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>В городе n автобусных остановок, через которые проходят k кольцевых автобусных маршрутов. Каждый маршрут задается списком номеров остановок, через которые он проходит, i-ый маршрут проходит по остановкам ai,1, ai,2, …, ai,li (в этом порядке). По маршруту ходит ровно один автобус. В момент времени 0 этот автобус находится на остановке ai1. На то, чтобы доехать до следующей на своем маршруте остановки, автобус тратит ровно одну минуту. Временем стоянки автобуса на остановке можно пренебречь. Все маршруты кольцевые, то есть через минуту после остановки ai,li автобус оказывается на остановке ai,1 и едет по маршруту еще раз.</p>
+
+  <p>Несколько человек в этом городе решили покататься на автобусах. При этом каждый из них составил план своего катания. План j-го человека состоит из остановки bj, на которой человек начнет свое катание и последовательности чисел cj,1, cj,2, …, cj,mj. Эти числа означают следующее: в момент времени 0 человек придет на остановку bj и дождется ближайшего автобуса (если в этот момент какой-то автобус находится на остановке bj, человек сядет в него). На этом автобусе он проедет cj,1 остановок, после чего выйдет и дождется следующего автобуса на той остановке, где он окажется. На нем он проедет cj,2 остановок, снова выйдет и снова дождется следующего автобуса. И так далее. Если в какой-то момент к остановке подъедет сразу несколько автобусов, то человек сядет в автобус с минимальным номером маршрута. Когда человек выходит из автобуса на какой-то остановке, он может уехать с этой остановки не раньше, чем через минуту.</p>
+
+  <p>Для каждого человека определите, через сколько минут после начального момента и на какой остановке закончится его катание.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Во входном файле записано сначала число n, затем число k. Далее записано k строк, задающих автобусные маршруты. Каждая строка начинается с числа li, задающего длину маршрута, затем идет список остановок, через которые проходит маршрут: ai,1, ai,2, …, ai,li. Маршрут может несколько раз проходить через одну и ту же остановку.</p>
+
+  <p>Далее идет число p – количество людей, и затем p строк, задающих планы людей. Каждая строка содержит сначала числа bj – номер начальной остановки и mj – количество чисел в последовательности. Затем идут числа cj,1, cj,2, …, cj,mj.</p>
+
+  <p>Все числа во входном файле натуральные и не превышают 50.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В выходной файл для каждого человека выведите два числа: время в минутах, когда закончится его катание, и номер остановки, на которой это произойдет. Если же человек не сможет реализовать свой план до конца (на какой-либо остановке он не дождется автобуса), выведите для него два нуля.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+6 4
+4  1 2 3 5
+2  3 4
+5  5 2 1 3 2
+2  4 3
+3
+1  4  1 2 3 4
+2  1  1
+6  3  1 2 3
+</pre>
+<pre>
+20 1
+2 3
+0 0
+</pre>
+  </details>
+</article>
+
+
+<!-- B. Покраска забора -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Покраска забора</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>Том Сойер уговорил n своих друзей помочь ему в нелегком деле покраски забора, окружающего дом тетушки Полли. Забор представляет собой k последовательных досок, пронумерованных от 1 до k, причем после k-й доски опять идет первая.</p>
+
+  <p>Друзья Тома очень привередливы, i-й друг согласен участвовать в покраске только в том случае, если ему дадут покрасить участок из ровно ai последовательных досок.</p>
+
+  <p>Кисточка у Тома только одна, поэтому друзья будут красить по очереди и сразу весь отведенный им отрезок. Тому остается лишь выбрать порядок, в котором приглашать друзей, а также выбрать для каждого желаемое количество последовательных досок.</p>
+
+  <p>При этом каждый из друзей Тома готов красить как еще неокрашенную доску забора, так и доску, которую уже покрасил один из его предшественников. Тем не менее, друзья получают больше удовольствия от покраски неокрашенной доски. Том хочет выбрать число x и распределить отрезки забора для покраски таким образом, чтобы каждый из его друзей покрасил хотя бы x неокрашенных досок. Том очень любит своих друзей и хочет, чтобы каждый из них получил от процесса покраски забора максимальное удовольствие, поэтому он пытается максимизировать x.</p>
+
+  <p>Помогите Тому понять, сколько радости он сможет доставить своим друзьям.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Первая строка входного файла содержит два целых числа n (1 ≤ n ≤ 10<sup>5</sup>) и k (1 ≤ k ≤ 10<sup>9</sup>). Следующая строка содержит n целых чисел - значения ai (1 ≤ ai ≤ k).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите одно число - максимальное возможное значение x.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+2 100
+5 10
+</pre>
+    <code>5</code>
+
+    <h4>Пример 2</h4>
+<pre>
+4 10
+7 8 3 5
+</pre>
+    <code>2</code>
+    <p>В первом примере x=5, так как один из друзей просто не хочет красить больше пяти досок. Он придет первым, покрасит свои пять, после чего еще 10 неокрашенных досок достанется второму другу Тома. Оставшиеся 85 досок Тому придется красить самому.</p>
+
+    <p>Во втором примере достичь x=2 можно, например, так. Сначала третий друг красит доски с 4 по 6 (3 неокрашенных доски). Затем четвертый друг красит доски с 1 по 5 (3 неокрашенных доски). Затем второй друг красит доски с 1 по 8 (2 неокрашенных доски). Наконец, первый друг красит доски с 6 по 10 и с 1 по 2 (2 неокрашенных доски, заметим, что забор идет по циклу и эти доски образуют последовательный отрезок).</p>
+  </details>
+</article>
+
+
+<!-- C. Объединение прямоугольников -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Объединение прямоугольников</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>На плоскости задано N прямоугольников с вершинами в точках с целыми координатами и сторонами, параллельными осям координат. Необходимо найти площадь их объединения.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке входного файла указано число N (0 ≤ N ≤ 1500). В следующих N строках заданы по 4 целых числа x1, y1, x2, y2 — сначала координаты левого нижнего угла прямоугольника, потом правого верхнего (0 ≤ x1 ≤ x2 ≤ 10<sup>9</sup>, 0 ≤ y1 ≤ y2 ≤ 10<sup>9</sup>). Обратите внимание, что прямоугольники могут вырождаться в отрезки и даже в точки.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В выходной файл выведите единственное число — ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+1 1 3 5
+5 2 7 4
+2 4 6 7
+</pre>
+    <code>23</code>
+  </details>
+</article>
+
+
+<!-- D. Древние цивилизации -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Древние цивилизации</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>Недавно Петя занялся изучением древних цивилизаций. Он нашел в энциклопедии даты рождения и гибели N различных древних цивилизаций и теперь хочет узнать о влиянии культуры одних цивилизаций на культуру других.</p>
+
+  <p>Петя предположил, что между цивилизациями A и B происходил культурный обмен, если они сосуществовали в течение некоторого ненулевого промежутка времени. Например, если цивилизация A зародилась в 600 году до н.э. и существовала до 400 года до н.э., а цивилизация B зародилась в 450 году до н.э. и существовала до 300 года до н.э., то культура каждой из этих цивилизаций оказывала влияние на развитие другой цивилизации в течение 50 лет. В то же время, если цивилизация C зародилась в 400 году до н.э. и существовала до 50 года до н.э., то она не смогла осуществить культурного обмена с цивилизацией A, в то время как культурный обмен с цивилизацией B продолжался в течение 100 лет.</p>
+
+  <p>Теперь для выполнения своих исследований Петя хочет найти такую пару цивилизаций, культурный обмен между которыми имел место на протяжении наименьшего ненулевого промежутка времени. Помогите ему!</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится число N – количество цивилизаций, культура которых интересует Петю (1 ≤ N ≤ 100000). Следующие N строк содержат описание цивилизаций – в каждой строке задаются два целых числа Si и Ei – год зарождения и год гибели соответствующей цивилизации. Все числа не превосходят 10<sup>9</sup> по абсолютной величине, Si &lt; Ei.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите два числа – номера цивилизаций, периоды существования которых имеют наименьшее ненулевое пересечение. Если никакие две цивилизации не пересекаются во времени, выведите единственное число 0.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+-600 -400
+-450 -300
+-400 -50
+</pre>
+    <code>1 2</code>
+
+    <h4>Пример 2</h4>
+<pre>
+2
+10 20
+15 21
+</pre>
+    <code>1 2</code>
+  </details>
+</article>
+
+
+<!-- E. Отрезки на прямой возвращаются -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Отрезки на прямой возвращаются</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>На прямой задано N попарно различных отрезков [ai, bi] (i = 1, 2, ..., N, ai &lt; bi). Будем говорить, что отрезок номер i непосредственно содержится в отрезке номер j (i ≠ j), если:</p>
+  <ol>
+    <li>он полностью принадлежит j-му (то есть aj ≤ ai и bi ≤ bj),</li>
+    <li>среди заданных N отрезков не найдётся такого отрезка (с номером k), что i-й отрезок принадлежит k-му и k-й принадлежит j-му (здесь i, j и k - различные числа).</li>
+  </ol>
+
+  <p>Ваша задача - для каждого из данных отрезков найти тот, в котором он непосредственно содержится, либо сообщить, что таких нет. Если данный отрезок непосредственно содержится сразу в нескольких - подходит любой из них.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Сначала вводится целое число N (1 ≤ N ≤ 100000). Далее идут N пар целых чисел ai, bi (-10<sup>9</sup> ≤ ai &lt; bi ≤ 10<sup>9</sup>).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите N чисел. Число номер i должно быть равно номеру отрезка, в котором непосредственно содержится отрезок номер i, либо 0 - если такого не существует.</p>
+
+  <p>Если существует несколько решений, выведите любое.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4
+2 3
+0 4
+1 6
+0 5
+</pre>
+    <code>3 4 0 0</code>
+  </details>
+</article>
