--- a/src/components/alg/alg-ta/ta5/pages/elem-l1.html
+++ b/src/components/alg/alg-ta/ta5/pages/elem-l1.html
@@ -4,7 +4,7 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 5.0</strong> (с 2024.03.01 до 2024.03.29)</p>
-  <p><a href="https://yandex.ru/yaintern/training/algorithm-training_march_2024">yandex.ru/yaintern/training/algorithm-training_march_2024</a></p>
+  <p><a href="https://yandex.ru/yaintern/training/algorithm-training_march_2024" target="_blank">yandex.ru/yaintern/training/algorithm-training_march_2024</a></p>
 
   <h4>Лекция 1 Сложность, тестирование, особые случаи</h4>
   <p>2024-03-01 Лекция 1 Сложность, тестирование, особые случаи.mp4</p>
