--- a/src/components/alg/alg-ta/ta6/pages/elem-l2.html
+++ b/src/components/alg/alg-ta/ta6/pages/elem-l2.html
@@ -4,10 +4,9 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 6.0</strong> (с 2024.10.24 до 2024.11.28)</p>
+  <p><a href="https://yandex.ru/yaintern/training/algorithm-training-october-2024" target="_blank">yandex.ru/yaintern/training/algorithm-training-october-2024</a></p>
 
   <h4>Лекция 2 Префиксные суммы и два указателя</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
-  <p><a href="https://contest.yandex.ru/contest/27393/problems/">Задачи</a></p>
   <p>2024-10-31 Лекция 2 Префиксные суммы и два указателя.mp4</p>
 </article>
 
