--- a/src/components/alg/alg-ta/ta2/pages/elem-l6bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l6bdz.html
@@ -10,3 +10,239 @@
   <p><a href="https://contest.yandex.ru/contest/29188/problems/" target="_blank">contest.yandex.ru/contest/29188/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t1">A. Быстрый поиск в массиве</a>
+  <br><a href="#t2">B. Номер левого и правого вхождения</a>
+  <br><a href="#t3">C. Корень кубического уравнения</a>
+  <br><a href="#t4">D. Вырубка леса</a>
+  <br><a href="#t5">E. Покрытие K отрезками</a>
+</article>
+
+
+<!-- A. Быстрый поиск в массиве -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Быстрый поиск в массиве</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>Дан массив из N целых чисел. Все числа от -10<sup>9</sup> до 10<sup>9</sup>.</p>
+
+  <p>Нужно уметь отвечать на запросы вида “Cколько чисел имеют значения от L до R?”.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Число N (1 ≤ N ≤ 10<sup>5</sup>). Далее N целых чисел.</p>
+
+  <p>Затем число запросов K (1 ≤ K ≤ 10<sup>5</sup>).</p>
+
+  <p>Далее K пар чисел L, R (-10<sup>9</sup> ≤ R ≤ 10<sup>9</sup>) — собственно запросы.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите K чисел — ответы на запросы.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+5
+10 1 10 3 4
+4
+1 10
+2 9
+3 4
+2 2
+</pre>
+    <code>5 2 2 0</code>
+  </details>
+</article>
+
+
+<!-- B. Номер левого и правого вхождения -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Номер левого и правого вхождения</h3>
+
+  <div class="time-memory">(Время 2с. Память 64мб)</div>
+
+  <p>Требуется определить в заданном массиве номер самого левого и самого правого элемента, равного искомому числу.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке вводится одно натуральное число N, не превосходящее 10<sup>5</sup>: количество чисел в массиве. Во второй строке вводятся N натуральных чисел, не превосходящих 10<sup>9</sup>, каждое следующее не меньше предыдущего. В третьей строке вводится количество искомых чисел M – натуральное число, не превосходящее 10<sup>6</sup>. В четвертой строке вводится M натуральных чисел, не превосходящих 10<sup>9</sup>.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Для каждого запроса выведите в отдельной строке через пробел два числа: номер элемента самого левого и самого правого элементов массива, равных числу-запросу. Элементы массива нумеруются с единицы.Если в массиве нет такого числа, выведите в соответствующей строке два нуля, разделенных пробелом.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+4
+1 2 2 3
+4
+4 3 2 1
+</pre>
+<pre>
+0 0
+4 4
+2 3
+1 1
+</pre>
+
+    <h4>Пример 2</h4>
+<pre>
+10
+1 2 3 4 5 6 7 7 8 9
+10
+7 3 3 1 3 7 9 7 7 10
+</pre>
+<pre>
+7 8
+3 3
+3 3
+1 1
+3 3
+7 8
+10 10
+7 8
+7 8
+0 0
+</pre>
+
+    <h4>Пример 3</h4>
+<pre>
+10
+1 3 3 3 3 6 8 8 9 10
+10
+2 9 6 4 2 9 3 7 9 7
+</pre>
+<pre>
+0 0
+9 9
+6 6
+0 0
+0 0
+9 9
+2 5
+0 0
+9 9
+0 0
+</pre>
+  </details>
+</article>
+
+
+<!-- C. Корень кубического уравнения -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Корень кубического уравнения</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Дано кубическое уравнение ax<sup>3</sup> + bx<sup>2</sup> + cx + d = 0 (a ≠ 0). Известно, что у этого уравнения есть ровно один корень. Требуется его найти.</p>
+
+  <h4>Формат ввода</h4>
+  <p>Во входном файле через пробел записаны четыре целых числа: -1000 ⩽ a, b, c, d ⩽ 1000.</p>
+
+  <h4>Формат вывода</h4>
+  <p>Выведите единственный корень уравнения с точностью не менее 5 знаков после десятичной точки.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 -3 3 -1</code>
+    <code>1.0000036491</code>
+
+    <h4>Пример 2</h4>
+    <code>-1 -6 -12 -7</code>
+    <code>-1.0000000111</code>
+  </details>
+</article>
+
+
+<!-- D. Вырубка леса -->
+<article class="article">
+  <div class="anchor" id="t4"></div>
+  <h3>D. Вырубка леса</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Фермер Николай нанял двух лесорубов: Дмитрия и Федора, чтобы вырубить лес, на месте которого должно быть кукурузное поле. В лесу растут X деревьев.</p>
+
+  <p>Дмитрий срубает по A деревьев в день, но каждый K-й день он отдыхает и не срубает ни одного дерева. Таким образом, Дмитрий отдыхает в K-й, 2K-й, 3K-й день, и т.д.</p>
+
+  <p>Федор срубает по B деревьев в день, но каждый M-й день он отдыхает и не срубает ни одного дерева. Таким образом, Федор отдыхает в M-й, 2M-й, 3M-й день, и т.д.</p>
+
+  <p>Лесорубы работают параллельно и, таким образом, в дни, когда никто из них не отдыхает, они срубают A+B деревьев, в дни, когда отдыхает только Федор — A деревьев, а в дни, когда отдыхает только Дмитрий — B деревьев. В дни, когда оба лесоруба отдыхают, ни одно дерево не срубается.</p>
+
+  <p>Фермер Николай хочет понять, за сколько дней лесорубы срубят все деревья, и он сможет засеять кукурузное поле.</p>
+
+  <p>Требуется написать программу, которая по заданным целым числам A, K, B, M и X определяет, за сколько дней все деревья в лесу будут вырублены.</p>
+
+  <h4>Формат ввода</h4>
+  <p></p>Входной файл содержит пять целых чисел, разделенных пробелами: A,K,B,M и X (1 ≤ A, B ≤ 10<sup>9</sup>, 2 ≤ K, M ≤ 10<sup>18</sup>, 1 ≤ X ≤ 10<sup>18</sup>).
+
+  <h4>Формат вывода</h4>
+  <p>Выходной файл должен содержать одно целое число — искомое количество дней.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1 2 1 3 10</code>
+    <code>8</code>
+
+    <h4>Пример 2</h4>
+    <code>1 2 1 3 11</code>
+    <code>9</code>
+
+    <h4>Пример 3</h4>
+    <code>19 3 14 6 113</code>
+    <code>4</code>
+    <p>Рассмотрим пример:</p>
+    <code>2 4 3 3 25</code>
+    <code>7</code>
+
+    <p>В приведенном примере лесорубы вырубают 25 деревьев за 7 дней следующим образом:</p>
+    <ul>
+      <li>1-й день: Дмитрий срубает 2 дерева, Федор срубает 3 дерева, итого 5 деревьев;</li>
+      <li>2-й день: Дмитрий срубает 2 дерева, Федор срубает 3 дерева, итого 10 деревьев;</li>
+      <li>3-й день: Дмитрий срубает 2 дерева, Федор отдыхает, итого 12 деревьев;</li>
+      <li>4-й день: Дмитрий отдыхает, Федор срубает 3 дерева, итого 15 деревьев;</li>
+      <li>5-й день: Дмитрий срубает 2 дерева, Федор срубает 3 дерева, итого 20 деревьев;</li>
+      <li>6-й день: Дмитрий срубает 2 дерева, Федор отдыхает, итого 22 дерева;</li>
+      <li>7-й день: Дмитрий срубает 2 дерева, Федор срубает оставшееся 1 дерево, итого все 25 деревьев срублены.</li>
+    </ul>
+  </details>
+</article>
+
+
+<!-- E. Покрытие K отрезками -->
+<article class="article">
+  <div class="anchor" id="t5"></div>
+  <h3>E. Покрытие K отрезками</h3>
+
+  <div class="time-memory">(Время 1с. Память 64мб)</div>
+
+  <p>Даны n точек на прямой, нужно покрыть их k отрезками одинаковой длины l.</p>
+
+  <p>Найдите минимальное l.</p>
+
+  <h4>Формат ввода</h4>
+  <p>На первой строке два целых числа n (1 ≤ n ≤ 10<sup>5</sup>) и k (1 ≤ k ≤ n). На второй n целых чисел xi (|xi| ≤ 10<sup>9</sup>).</p>
+
+  <h4>Формат вывода</h4>
+  <p>Минимальное такое l, что точки можно покрыть k отрезками длины l.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+6 2
+1 2 3 9 8 7
+</pre>
+    <code>2</code>
+  </details>
+</article>
