--- a/src/components/alg/alg-ta/ta2/pages/elem-l7bdz.html
+++ b/src/components/alg/alg-ta/ta2/pages/elem-l7bdz.html
@@ -10,3 +10,151 @@
   <p><a href="https://contest.yandex.ru/contest/29396/problems/" target="_blank">contest.yandex.ru/contest/29396/problems</a></p>
 </article>
 
+
+<!-- Содержание -->
+<article class="article">
+  <h3>Содержание</h3>
+
+      <a href="#t0">0. ФИО</a>
+  <br><a href="#t1">A. Закраска прямой</a>
+  <br><a href="#t2">B. Таможня</a>
+  <br><a href="#t3">C. Минимальное покрытие</a>
+</article>
+
+
+<!-- 0. ФИО -->
+<article class="article">
+  <div class="anchor" id="t0"></div>
+  <h3>0. ФИО</h3>
+
+  <p>Введите свою фамилию, имя и отчество (просто текст).</p>
+</article>
+
+
+<!-- A. Закраска прямой -->
+<article class="article">
+  <div class="anchor" id="t1"></div>
+  <h3>A. Закраска прямой</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>На числовой прямой окрасили N отрезков. Известны координаты левого и правого концов каждого отрезка (Li и Ri). Найти длину окрашенной части числовой прямой.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке находится число N, в следующих N строках - пары Li и Ri. Li и Ri - целые, -10<sup>9</sup> ≤ Li ≤ Ri ≤ 10<sup>9</sup> 1 ≤ N ≤ 15000</p>
+
+  <h4>Формат вывода</h4>
+  <p>Вывести одно число - длину окрашенной части прямой.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+1
+10 20
+</pre>
+    <code>10</code>
+
+    <h4>Пример 2</h4>
+<pre>
+1
+10 10
+</pre>
+    <code>0</code>
+
+    <h4>Пример 3</h4>
+<pre>
+2
+10 20
+20 40
+</pre>
+    <code>30</code>
+  </details>
+</article>
+
+
+<!-- B. Таможня -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>B. Таможня</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>Идёт 2163 год. Мишу, который работает в отделении таможни при космодроме города Нью-Питер, вызвал в кабинет шеф.</p>
+
+  <p>Как оказалось, недавно Министерство Налогов и Сборов выделило отделению определённую сумму денег на установку новых аппаратов для автоматического досмотра грузов. Естественно, средства были выделены с таким расчётом, чтобы грузы теперь находились на таможне ровно столько времени, сколько требуется непосредственно на их досмотр.</p>
+
+  <p>В руках шефа каким-то образом оказались сведения о надвигающейся ревизии – список из N грузов, которые будут контролироваться Министерством. Для каждого груза известны время его прибытия, отсчитываемое с некоторого момента, хранимого в большом секрете, и время, требуемое аппарату для обработки этого груза. Шеф дал Мише задание по этим данным определить, какое минимальное количество аппаратов необходимо заказать на заводе, чтобы все грузы Министерства начинали досматриваться сразу после прибытия. Необходимо учесть, что конструкция тех аппаратов, которые было решено установить, не позволяет обрабатывать два груза одновременно на одном аппарате. Напишите программу, которая поможет Мише справиться с его задачей.</p>
+
+  <h4>Формат ввода</h4>
+  <p>На первой строке входного файла задано число N (0 ≤ N ≤ 50 000). На следующих N строках находится по 2 целых положительных числа Ti и Li – время прибытия соответствующего груза и время, требуемое для его обработки (1 ≤ Ti ≤ 10<sup>6</sup>, 1 ≤ Li ≤ 10<sup>6</sup>).</p>
+
+  <h4>Формат вывода</h4>
+  <p>В выходной файл выведите одно число – наименьшее количество аппаратов, которое нужно установить, чтобы не вызвать подозрений у Министерства.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+3
+3 2
+4 2
+5 2
+</pre>
+    <code>2</code>
+
+    <h4>Пример 2</h4>
+<pre>
+5
+13 4
+15 1
+11 5
+12 3
+10 3
+</pre>
+    <code>3</code>
+  </details>
+</article>
+
+
+<!-- C. Минимальное покрытие -->
+<article class="article">
+  <div class="anchor" id="t3"></div>
+  <h3>C. Минимальное покрытие</h3>
+
+  <div class="time-memory">(Время 3с. Память 64мб)</div>
+
+  <p>На прямой задано некоторое множество отрезков с целочисленными координатами концов [Li, Ri]. Выберите среди данного множества подмножество отрезков, целиком покрывающее отрезок [0, M], (M — натуральное число), содержащее наименьшее число отрезков.</p>
+
+  <h4>Формат ввода</h4>
+  <p>В первой строке указана константа M (1 ≤ M ≤ 5000). В каждой последующей строке записана пара чисел Li и Ri (Li, Ri ≤ 50000), задающая координаты левого и правого концов отрезков. Список завершается парой нулей. Общее число отрезков не превышает 100 000.</p>
+
+  <h4>Формат вывода</h4>
+  <p>В первой строке выходного файла выведите минимальное число отрезков, необходимое для покрытия отрезка [0; M]. Далее выведите список покрывающего подмножества, упорядоченный по возрастанию координат левых концов отрезков. Список отрезков выводится в том же формате, что и во входe. Завершающие два нуля выводить не нужно. Если покрытие отрезка [0, M] исходным множеством отрезков [Li, Ri] невозможно, то следует вывести единственную фразу “No solution”.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+<pre>
+1
+-1 0
+-5 -3
+2 5
+0 0
+</pre>
+<pre>
+No solution
+</pre>
+    <h4>Пример 2</h4>
+<pre>
+1
+-1 0
+0 1
+0 0
+</pre>
+<pre>
+1
+0 1
+</pre>
+  </details>
+</article>
