--- a/src/components/alg/alg-ta/ta5/pages/elem-l1dz.html
+++ b/src/components/alg/alg-ta/ta5/pages/elem-l1dz.html
@@ -4,7 +4,7 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 5.0</strong> (с 2024.03.01 до 2024.03.29)</p>
-  <p><a href="https://yandex.ru/yaintern/training/algorithm-training_march_2024">yandex.ru/yaintern/training/algorithm-training_march_2024</a></p>
+  <p><a href="https://yandex.ru/yaintern/training/algorithm-training_march_2024" target="_blank">yandex.ru/yaintern/training/algorithm-training_march_2024</a></p>
 
   <h4>Домашнее задание по лекции 1</h4>
   <p><a href="https://contest.yandex.ru/contest/59539/problems/" target="_blank">contest.yandex.ru/contest/59539/problems</a></p>
