--- a/src/components/alg/alg-ta/ta5/pages/elem-s2.html
+++ b/src/components/alg/alg-ta/ta5/pages/elem-s2.html
@@ -4,10 +4,9 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 5.0</strong> (с 2024.03.01 до 2024.03.29)</p>
+  <p><a href="https://yandex.ru/yaintern/training/algorithm-training_march_2024" target="_blank">yandex.ru/yaintern/training/algorithm-training_march_2024</a></p>
 
   <h4>Собеседование по алгоритмам в прямом эфире + его разбор</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
-  <p><a href="https://contest.yandex.ru/contest/27393/problems/">Задачи</a></p>
   <p>2024-03-28 Собеседование по алгоритмам в прямом эфире + его разбор.mp4</p>
 </article>
 
