--- a/src/components/alg/alg-ta/ta7/pages/elem-r4.html
+++ b/src/components/alg/alg-ta/ta7/pages/elem-r4.html
@@ -4,10 +4,9 @@
 <article class="article">
   <h2>Михаил Густокашин</h2>
   <p>Конспект курса <strong>Тренировки по алгоритмам 7.0</strong> (с 2025.04.09 до 2025.05.05)</p>
+  <p><a href="https://yandex.ru/yaintern/training/algorithm-training-march-2025" target="_blank">yandex.ru/yaintern/training/algorithm-training-march-2025</a></p>
 
   <h4>Разбор ДЗ по лекции 4</h4>
-  <p><a href="https://yandex.ru/yaintern/algorithm-training_2021">yandex.ru/yaintern/algorithm-training_2021</a></p>
-  <p><a href="https://contest.yandex.ru/contest/27393/problems/">Задачи</a></p>
   <p>2025-05-05 Разбор ДЗ по лекции 4.mp4</p>
 </article>
 
